--- a/install.txt
+++ b/install.txt
@@ -29,3 +29,33 @@ mkdir src/models
 mkdir src/business 
 mkdir src/data
 mkdir src/services  
+
+
+
+----------------- PACKAGE.JSON -----------------
+
+    "start": "node ./build/index.js",
+    "build": "tsc",
+    "dev": "tsnd src/index.ts"
+
+
+------------- CONECTION.TS ------------------ 
+
+import knex from "knex";
+import dotenv from "dotenv";
+
+dotenv.config();
+
+const connection = knex({
+   client: "mysql",
+   connection: {
+      host: process.env.DB_HOST,
+      port: 3306,
+      user: process.env.DB_USER,
+      password: process.env.DB_PASSWORD,
+      database: process.env.DB_DATABASE,
+      multipleStatements: true
+   },
+});
+
+export default connection
