--- a/install.txt
+++ b/install.txt
@@ -1,7 +1,7 @@
 npm init -y
 npm install 
-npm install knex mysql typescript express dotenv cors ts-node-dev -D
-npm install --save-dev @types/knex @types/mysql @types/express @types/cors @types/node
+npm install knex mysql typescript express dotenv cors ts--D
+npm install --save-dev @types/knex @types/mysql @types/express @types/cors @types/node @types/jsonwebtoken
 
 npx tsc --init
 
@@ -59,3 +59,42 @@ const connection = knex({
 });
 
 export default connection
+
+
+DB_HOST = localhost
+DB_USER = root
+DB_PASSWORD = dbd@1130KEKW
+DB_DATABASE = labenu__
+
+// JWTOKEN
+-------------------------------
+
+import * as jwt from 'jsonwebtoken'
+
+
+export type authenticationData = {
+    id: string;
+};
+
+
+export class Authenticator {
+
+    public GenerateToken = ( payload: authenticationData ) => {     // gerar token
+        return jwt.sign( payload, process.env.JWT_KEY as string, { expiresIn: "5h" } );
+    };
+
+    public GetTokenData = ( token: string ) => {    //validar token
+
+        const tokenData = jwt.verify( token, process.env.JWT_KEY as string );
+        return tokenData;
+    };
+
+}
+-----------------------------------------------------
+
+   const authenticator: Authenticator = new Authenticator()
+        const payload: authenticationData = { id: user.getId() }
+
+        const token = authenticator.GenerateToken( payload )
+
+-----------------------------------------------------
